# staircase-automate-esp32

./: .gitmodules  CMakeLists.txt  LICENSE
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  station_example_main.c  station_example_main.cpp
staircase-automate-hal/: CMakeLists.txt
staircase-automate-hal/include/: ESP32BinaryValueReader.hxx  ESP32BinaryValueWriter.hxx  ESP32Persistence.hxx  ESP32Task.hxx  ESP32Timing.hxx
staircase-automate-hal/src/: ESP32BinaryValueReader.cxx  ESP32BinaryValueWriter.cxx  ESP32Persistence.cxx  ESP32Task.cxx  ESP32Timing.cxx
